style.css
html,
body {
    overflow-x: hidden;
    overflow-y: hidden;
    width: 100%;
    height: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    position: relative;
    transition: background-color 0.8s, color 0.5s;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.header {
    flex-shrink: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    font-size: 24px;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
}

.drawer {
    top: 20px;
    right: 20px;
    cursor: pointer;
}

.drawerText {
    position: fixed;
    top: 0;
    right: -350px;
    width: 300px;
    height: 100%;
    padding: 20px;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    -o-backdrop-filter: blur(5px);
    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
    transition: right 0.4s ease;
    z-index: 1000;
}

.drawerText.open {
    right: 0;
}

.drawerText i {
    position: absolute;
    top: 20px;
    right: 20px;
    cursor: pointer;
}

.drawerText p {
    margin: 10px 0;
    font-size: 14px;
    line-height: 1.5;
}

button {
    border: none;
    background-color: transparent;
}

.colorCode {
    font-size: 48px;
    margin-bottom: 20px;
}

.footer {
    box-sizing: border-box;
    width: 100%;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

.text {
    text-align: center;
}

.icons {
    text-align: center;
}

@media (max-width: 768px) {
    body {
        min-height: 100vh;
    }

    .header {
        font-size: 20px;
    }

    .container {
        height: auto;
    }

    .drawerText {
        width: 250px;
        padding: 10px;
    }

    .drawerText i {
        font-size: 20px;
    }

    .drawerText p {
        font-size: 12px;
    }

    .colorCode {
        font-size: 36px;
    }

    .footer {
        font-size: 12px;
    }

    .icons {
        gap: 12px;
    }

    .footer a {
        font-size: 12px;
    }
}

@media (max-width: 480px) {
    body {
        min-height: 100vh;
    }

    .header {
        font-size: 18px;
    }

    .container {
        height: auto
    }

    .drawerText {
        width: 200px;
        padding: 8px;
    }

    .drawerText i {
        font-size: 18px;
    }

    .drawerText p {
        font-size: 10px;
    }

    .colorCode {
        font-size: 28px;
    }

    .footer {
        font-size: 10px;
        bottom: 5px;
        left: 5px;
    }

    .icons {
        gap: 5px;
    }

    .footer a {
        font-size: 10px;
    }
}

